[tool.poetry]
name = "pegasusX"
version = "0.4.0"
description = "pegasus - Pytorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyegomez/pegasus"
repository = "https://github.com/kyegomez/pegasus"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]
packages = [
    { include = "pegasus" },
    { include = "pegasus/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6"
hnswlib = "0.7.0"
pandas = "1.3.5"
pydantic = "1.9.0"
requests = "2.28.1"
typing_extensions = "4.5.0"
uvicorn = {version = "0.18.3", extras = ["standard"]}
torch = "*"
torchvision = "*"
torchaudio = "*"
timm = "0.6.7"
pytorchvideo = "*"
ftfy = "*"
regex = "*"
einops = "*"
fvcore = "*"
decord = "0.6.0"
numba = "*"
joblib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"